--- a/pp.html
+++ b/pp.html
@@ -108,10 +108,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 61 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 31 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 5 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 46 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 61 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 31 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 5 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 46 veces en contra.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
@@ -119,10 +119,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 6 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 37 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 59 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 15 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 6 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 37 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 59 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 15 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -130,10 +130,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 13 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 12 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 16 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 19 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> se ha abstenido en 13 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> se ha abstenido en 12 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> se ha abstenido en 16 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> se ha abstenido en 19 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='4'>
@@ -141,10 +141,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Partido Popular</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra de <strong>Zaragoza En Común</strong> en 44 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 17 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra de <strong>Ciudadanos</strong> en 10 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 30 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 44 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 17 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 10 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>CHA</strong> en 30 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='5'>
@@ -152,10 +152,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Partido Popular</strong> ha votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 3 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 43 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor de <strong>Ciudadanos</strong> en 30 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 6 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 3 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 43 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 30 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 6 ocasiones.</p>
                 </div>
             </div>
         </div>
