--- a/psoe.html
+++ b/psoe.html
@@ -90,10 +90,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 17 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 28 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 6 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 9 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 17 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 28 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 6 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 9 veces en contra.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
@@ -101,10 +101,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 40 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 19 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 55 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 51 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 40 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 19 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 55 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 51 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -112,10 +112,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 8 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 20 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 7 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 7 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> se ha abstenido en 8 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> se ha abstenido en 20 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> se ha abstenido en 7 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> se ha abstenido en 7 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='4'>
@@ -123,10 +123,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>PSOE</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado en contra del <strong>Partido Popular</strong> en 31 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado en contra de <strong>Zaragoza En Común</strong> en 12 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado en contra de <strong>Ciudadanos</strong> en 4 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 6 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 31 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 12 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 4 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>CHA</strong> en 6 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='5'>
@@ -134,10 +134,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                 </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>PSOE</strong> ha votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado a favor del <strong>Partido Popular</strong> en 37 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 33 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado a favor de <strong>Ciudadanos</strong> en 42 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 42 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 37 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 33 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 42 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 42 ocasiones.</p>
                 </div>
             </div>
         </div>
