--- a/zec.html
+++ b/zec.html
@@ -94,10 +94,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 44 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 12 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 17 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en 1 ocasión en su contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 44 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 12 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 17 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> en 1 ocasión en su contra.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
@@ -105,10 +105,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
                 </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 3 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 33 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 22 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 48 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 3 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 33 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 22 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 48 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -116,32 +116,32 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 7 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 9 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 15 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 5 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> se ha abstenido en 7 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> se ha abstenido en 9 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> se ha abstenido en 15 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> se ha abstenido en 5 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='4'>
                 <div class="step-blanco">
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                 </h2>
-                    <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Zaragoza En Común</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra del <strong>Partido Popular</strong> en 61 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 28 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra de <strong>Ciudadanos</strong> en 17 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 7 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que En contra del resto de partidos.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 61 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 28 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 17 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>CHA</strong> en 7 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='5'>
                 <div class="step-blanco">
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                     </h2>
-                    <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Zaragoza En Común</strong> ha votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor del <strong>Partido Popular</strong> en 6 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 20 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor de <strong>Ciudadanos</strong> en 12 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 43 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que A favor del resto de partidos.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 6 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 20 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 12 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 43 ocasiones.</p>
                 </div>
             </div>
         </div>
