--- a/ciudadanos.html
+++ b/ciudadanos.html
@@ -78,10 +78,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos. Es el partido que menos votos en contra recibe.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 10 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 17 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 4 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 13 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 10 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 17 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 4 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 13 veces en contra.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
@@ -89,10 +89,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 30 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 12 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 42 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 16 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 30 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 12 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 42 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 16 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -100,10 +100,10 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 7 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 18 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 1 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 18 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> se ha abstenido en 7 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> se ha abstenido en 18 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> se ha abstenido en 1 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> se ha abstenido en 18 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='4'>
@@ -111,10 +111,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Ciudadanos</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado en contra del <strong>Partido Popular</strong> en 5 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado en contra de <strong>Zaragoza En Común</strong> en 17 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 6 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 13 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 5 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 17 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 6 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>CHA</strong> en 13 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='5'>
@@ -122,10 +122,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Ciudadanos ha votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado a favor del <strong>Partido Popular</strong> en 59 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 22 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 55 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 29 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 59 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 22 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 55 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 29 ocasiones.</p>
                 </div>
             </div>
         </div>
