--- a/partidos.html
+++ b/partidos.html
@@ -5,10 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Partidos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/tipuesearch_content.js"></script>
-    <script type="text/javascript" src="js/tipuesearch_set.js"></script>
-    <script type="text/javascript" src="js/tipuesearch.min.js"></script>
+    <script src="lib/jquery-3.3.1.min.js"></script>
+    <script src="lib/tipuesearch_content.js"></script>
+    <script src="lib/tipuesearch_set.js"></script>
+    <script src="lib/tipuesearch.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Roboto+Condensed" rel="stylesheet">
 </head>
@@ -41,7 +41,7 @@
             <p class="partido-card-concejales">10 CONCEJALES</p>
             <p class="partido-card-votos">87.554 VOTOS · 26.88%</p>
         </a>
-        <a href="/zec" class="partido-card-top partido-card-top-zec pos-r font-bislai">
+        <a href="/zec" class="partido-card-top partido-card-top-zec">
             <div class="partido-card-bg partido-card-zec"></div>
             <h3 class="partido-card-title">ZARAGOZA EN COMÚN</h3>
             <p class="partido-card-concejales">9 CONCEJALES</p>
@@ -53,7 +53,7 @@
             <p class="partido-card-concejales">6 CONCEJALES</p>
             <p class="partido-card-votos">60.746 VOTOS · 18.65%</p>
         </a>
-        <a href="/ciudadanos" class="partido-card-top partido-card-top-cs pos-r font-bislai">
+        <a href="/ciudadanos" class="partido-card-top partido-card-top-cs">
             <div class="partido-card-bg partido-card-cs"></div>
             <h3 class="partido-card-title">CIUDADANOS</h3>
             <p class="partido-card-concejales">4 CONCEJALES</p>
