--- a/cha.html
+++ b/cha.html
@@ -6,11 +6,11 @@
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
     <meta name="description" content="Accesibilidad y transparencia política para los plenos del Ayuntamiento de Zaragoza">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/tipuesearch_content.js"></script>
-    <script type="text/javascript" src="js/tipuesearch_set.js"></script>
-    <script type="text/javascript" src="js/tipuesearch.min.js"></script>
-    <script type="text/javascript" src="js/d3.min4.js"></script>
+    <script src="lib/jquery-3.3.1.min.js"></script>
+    <script src="lib/tipuesearch_content.js"></script>
+    <script src="lib/tipuesearch_set.js"></script>
+    <script src="lib/tipuesearch.min.js"></script>
+    <script src="lib/d3.min4.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Roboto+Condensed" rel="stylesheet">
@@ -61,11 +61,8 @@
         </section>
     </section>
     <article class="grafica-favor-legislatura">
-        <h3 class="partidos-grafico-titulo">Distribución del voto a favor de Chunta</h3>
-        <p class="partidos-grafico-parrafo">Cada círculo representa un partido y cúantas veces ha votado Chunta a favor a lo largo de la legislatura.</p>
-        <svg>
-            <g class="grafica-favor-legislatura-container"></g>
-        </svg>
+        <h3 class="partidos-grafico-titulo">DISTRIBUCIÓN DEL VOTO A FAVOR DE CHUNTA</h3>
+        <p class="partidos-grafico-parrafo">Así han evolucionado a lo largo de la lesgislatura los votos a favor de CHUNTA al resto de partidos del Ayuntamiento. </p>
     </article>
     <section id='scroll'>
         <div class='scroll__graphic'>
@@ -152,8 +149,8 @@
         </div>
     </footer>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
-    <script type="text/javascript" src="js/scrollama.min.js"></script>
-    <script type="text/javascript" src="js/mapa-cha.js"></script>
+    <script src="lib/scrollama.min.js"></script>
+    <script src="js/mapa-cha.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
