--- a/estadisticas.html
+++ b/estadisticas.html
@@ -125,9 +125,9 @@
         <p class="maw-60 padding-1-0">© 2016 - 2018 · Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
-    <script type="text/javascript" src="js/scrollama.min.js"></script>
-    <script type="text/javascript" src="js/d3.min4.js"></script>
-    <script type="text/javascript" src="js/estadisticas.js"></script>
+    <script src="lib/scrollama.min.js"></script>
+    <script src="lib/d3.min4.js"></script>
+    <script src="js/estadisticas.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
