--- a/psoe.html
+++ b/psoe.html
@@ -7,11 +7,11 @@
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
     <meta name="description" content="Accesibilidad y transparencia política para los plenos del Ayuntamiento de Zaragoza">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/tipuesearch_content.js"></script>
-    <script type="text/javascript" src="js/tipuesearch_set.js"></script>
-    <script type="text/javascript" src="js/tipuesearch.min.js"></script>
-    <script type="text/javascript" src="js/d3.min4.js"></script>
+    <script src="lib/jquery-3.3.1.min.js"></script>
+    <script src="lib/tipuesearch_content.js"></script>
+    <script src="lib/tipuesearch_set.js"></script>
+    <script src="lib/tipuesearch.min.js"></script>
+    <script src="lib/d3.min4.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Roboto+Condensed" rel="stylesheet">
@@ -76,6 +76,10 @@
         </div>
         <section class="graficas-psoe graficas-partido"></section>
     </section>
+    <article class="grafica-favor-legislatura">
+        <h3 class="partidos-grafico-titulo">DISTRIBUCIÓN DEL VOTO A FAVOR DE PSOE</h3>
+        <p class="partidos-grafico-parrafo">Así han evolucionado a lo largo de la lesgislatura los votos a favor del PSOE al resto de partidos del Ayuntamiento. </p>
+    </article>
     <section id='scroll'>
         <div class='scroll__graphic'>
             <article class="chart-estadisticas">
@@ -161,8 +165,8 @@
         </div>
     </footer>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
-    <script type="text/javascript" src="js/scrollama.min.js"></script>
-    <script type="text/javascript" src="js/mapa-psoe.js"></script>
+    <script src="lib/scrollama.min.js"></script>
+    <script src="js/mapa-psoe.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
