--- a/ciudadanos.html
+++ b/ciudadanos.html
@@ -62,7 +62,7 @@
     </section>
     <article class="grafica-favor-legislatura">
         <h3 class="partidos-grafico-titulo">DISTRIBUCIÓN DEL VOTO A FAVOR DE CIUDADANOS</h3>
-        <p class="partidos-grafico-parrafo">Así han evolucionado a lo largo de la lesgislatura los votos a favor de CIUDADANOS al resto de partidos del Ayuntamiento. </p>
+        <p class="partidos-grafico-parrafo">Así ha evolucionado a lo largo de la lesgislatura los votos a favor de CIUDADANOS al resto de partidos del Ayuntamiento. </p>
     </article>
     <section id='scroll'>
         <div class='scroll__graphic'>
