preparando para incluir el nuevo pleno

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
-    <meta name="description" content="Accesibilidad y transparencia política para los plenos del Ayuntamiento de Zaragoza">
+    <meta name="description" content="Accesibilidad política y fiscalización para los plenos del Ayuntamiento de Zaragoza">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="lib/jquery-3.3.1.min.js"></script>
     <script src="lib/tipuesearch_content.js"></script>
@@ -118,6 +118,7 @@
                 <a class="tabla-calendario-link" href="/plenos/2018/01-06-2018">1 de junio de 2018</a>
                 <a class="tabla-calendario-link" href="/plenos/2018/29-06-2018">29 de junio de 2018</a>
                 <a class="tabla-calendario-link" href="/plenos/2018/27-07-2018">27 de julio de 2018</a>
+                <a class="tabla-calendario-link" href="/plenos/2018/28-09-2018">28 de septiembre de 2018</a>
             </section>
         </article>
     </section>
