--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bislai - 404 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Accesibilidad y transparencia política para los plenos del Ayuntamiento de Zaragoza">
+    <meta name="description" content="Accesibilidad política y fiscalización para los plenos del Ayuntamiento de Zaragoza">
     <script src="lib/jquery-3.3.1.min.js"></script>
     <script src="lib/tipuesearch_content.js"></script>
     <script src="lib/tipuesearch_set.js"></script>
