--- a/estadisticas.html
+++ b/estadisticas.html
@@ -48,26 +48,26 @@
             <div class='step' data-step='1'>
                 <div class="step-blanco">
                     <p class="title-estadisticas">¿Cuántas votaciones por unanimidad?</p>
-                    <p>En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">609 votaciones</span>, de las cuales, <span class="font-w8">212</span> se han votado por unanimidad.</p>
+                    <p>En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">622 votaciones</span>, de las cuales, <span class="font-w8">218</span> se han votado por unanimidad.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
                 <div class="step-blanco">
                     <p class="title-estadisticas">Los tripartitos del pleno</p>
                     <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
-                    <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 68 votaciones.</span></p>
-                    <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">64 votaciones</span>.</p>
+                    <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 70 votaciones.</span></p>
+                    <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">67 votaciones</span>.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
                 <div class="step-blanco">
                     <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
-                    <p>En total <span class="font-w8">se han presentado 428 mociones, y se han retirado 39.</span></p>
-                    <p> En primer lugar <span class="font-w8">PSOE</span> con <span class="font-w8">100</span>.</p>
-                    <p> En segundo lugar el <span class="font-w8">C'S</span> con <span class="font-w8">100</span>.</p>
-                    <p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">97</span>.</p>
-                    <p> En cuarto lugar <span class="font-w8">CHA</span> con <span class="font-w8">75</span>.</p>
-                    <p> En quinto lugar <span class="font-w8">ZEC</span> con <span class="font-w8">56</span>.</p>
+                    <p>En total <span class="font-w8">se han presentado 443 mociones, y se han retirado 39.</span></p>
+                    <p>En primer lugar <span class="font-w8">C'S</span> con <span class="font-w8">104</span>.</p>
+                    <p>En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">102</span>.</p>
+                    <p>En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">101</span>.</p>
+                    <p>En cuarto lugar <span class="font-w8">CHA</span> con <span class="font-w8">78</span>.</p>
+                    <p>En quinto lugar <span class="font-w8">ZEC</span> con <span class="font-w8">58</span>.</p>
                 </div>
             </div>
             <div class='step' data-step='4'>
@@ -75,40 +75,40 @@
                     <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
                     <p>En primer lugar <span class="font-w8">ZEC</span> con 62.</span>
                     </p>
-                    <p>En segundo lugar <span class="font-w8">CHA</span> con 59.
-                        <p>En tercer lugar <span class="font-w8">C'S</span> con 54.</p>
-                        <p> En cuarto lugar el <span class="font-w8">PP</span> con 41.</p>
-                        <p> En quinto lugar el <span class="font-w8">PSOE</span> con 35.</p>
+                    <p>En segundo lugar <span class="font-w8">CHA</span> con 61.
+                    <p>En tercer lugar <span class="font-w8">C'S</span> con 55.</p>
+                    <p>En cuarto lugar el <span class="font-w8">PP</span> con 41.</p>
+                    <p>En quinto lugar el <span class="font-w8">PSOE</span> con 36.</p>
                 </div>
             </div>
             <div class='step' data-step='5'>
                 <div class="step-blanco">
                     <p class="title-estadisticas">¿Quién vota más en contra?</p>
                     <p>En primer lugar <span class="font-w8">ZEC</span> con 145.</p>
-                    <p> En segundo lugar el <span class="font-w8">PP</span> con 115.</p>
-                    <p>En tercer lugar <span class="font-w8">CHA</span> con 82.</p>
-                    <p> En cuarto lugar el <span class="font-w8">PSOE</span> con 62.</p>
-                    <p> En quinto lugar <span class="font-w8">C'S</span> con 47.</p>
+                    <p>En segundo lugar el <span class="font-w8">PP</span> con 117.</p>
+                    <p>En tercer lugar <span class="font-w8">CHA</span> con 84.</p>
+                    <p>En cuarto lugar el <span class="font-w8">PSOE</span> con 63.</p>
+                    <p>En quinto lugar <span class="font-w8">C'S</span> con 49.</p>
                 </div>
             </div>
             <div class='step' data-step='6'>
                 <div class="step-blanco">
                     <p class="title-estadisticas">¿Quién vota más a favor?</p>
-                    <p>En primer lugar <span class="font-w8">PSOE</span> con 261.</p>
-                    <p> En segundo lugar el <span class="font-w8">C'S</span> con 257.</p>
-                    <p> En tercer lugar <span class="font-w8">CHA</span> con 217.</p>
-                    <p> En cuarto lugar el <span class="font-w8">PP</span> con 202.</p>
-                    <p> En quinto lugar <span class="font-w8">ZEC</span> con 151.</p>
+                    <p>En primer lugar <span class="font-w8">PSOE</span> con 266.</p>
+                    <p>En segundo lugar el <span class="font-w8">C'S</span> con 261.</p>
+                    <p>En tercer lugar <span class="font-w8">CHA</span> con 220.</p>
+                    <p>En cuarto lugar el <span class="font-w8">PP</span> con 207.</p>
+                    <p>En quinto lugar <span class="font-w8">ZEC</span> con 151.</p>
                 </div>
             </div>
             <div class='step' data-step='7'>
                 <div class="step-blanco">
                     <p class="title-estadisticas">La soledad del pleno</p>
                     <p>El número de veces que cada partido ha votado en solitario.</p>
-                    <p>En primer lugar el <span class="font-w8">PP</span> con 116.</p>
-                    <p> En segundo lugar <span class="font-w8">ZEC</span> con 108.</p>
-                    <p> En tercer lugar <span class="font-w8">C'S</span> con 39.</p>
-                    <p> En cuarto lugar <span class="font-w8">CHA</span> con 38.</p>
+                    <p>En primer lugar el <span class="font-w8">PP</span> con 117.</p>
+                    <p> En segundo lugar <span class="font-w8">ZEC</span> con 111.</p>
+                    <p> En tercer lugar <span class="font-w8">C'S</span> con 40.</p>
+                    <p> En cuarto lugar <span class="font-w8">CHA</span> con 39.</p>
                     <p> En quinto lugar el <span class="font-w8">PSOE</span> con 21.</p>
                 </div>
             </div>
