fix donut and add disclaimer

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -28,7 +28,7 @@
                 <img class="home-image" alt="una mano de un hombre ayuda a una mano de una mujer introducir un voto en una urna" src="img/stats.jpg" />
             </div>
             <div class="home-position-container-claim">
-                <span class="home-position-container-title">ESTADÍSTICAS ACUMULADAS</span> Esta serie de estadísticas se han hecho a partir de las mociones. En algunas mociones se votan diferentes puntos, así que las <strong>estadísticas se han obtenido de la suma de todas las votaciones.</strong>
+                <span class="home-position-container-title">ESTADÍSTICAS ACUMULADAS</span> Esta serie de estadísticas se han hecho a partir de las mociones. En algunas mociones se votan diferentes puntos, así que las <strong>estadísticas se han obtenido de la suma de todas las votaciones. No están incluídas aquellas mociones que se han votado por unanimidad.</strong>
             </div>
         </div>
     </div>
