--- a/cha.html
+++ b/cha.html
@@ -63,7 +63,7 @@
     </section>
     <article class="grafica-favor-legislatura">
         <h3 class="partidos-grafico-titulo">DISTRIBUCIÓN DEL VOTO A FAVOR DE CHUNTA</h3>
-        <p class="partidos-grafico-parrafo">Así ha evolucionado a lo largo de la lesgislatura los votos a favor de CHUNTA al resto de partidos del Ayuntamiento. </p>
+        <p class="partidos-grafico-parrafo">Así ha evolucionado a lo largo de la lesgislatura los votos a favor de CHUNTA al resto de partidos del Ayuntamiento. No están incluídas aquellas mociones que se han votado por unanimidad.</p>
     </article>
     <section id='scroll'>
         <div class='scroll__graphic'>
